syntax = "proto3";

import "cyph-plans.proto";


/** A Cyph plan. */
message CyphPlan {
	/** @see CyphPlans */
	required CyphPlans plan = 1;
}
